tests/paczka1/fuzzy1/24094478.err
Error in line 2: BNTBtFhh S558 64,53
Error in line 14: 9snH S558 89,2
Error in line 25: aM6 S558 36,2
Error in line 33: aM6 S558 28,97
Error in line 32: 9snH A819 150,2
